# toy-RNN

./: .gitattributes  .gitignore  Cargo.toml  flake.nix
data/: README.md  tinystories_sample.txt
scripts/: normalize_mnist_csv.py
src/: main.rs  mnist.rs  network.rs  neuron.rs  training.rs
src/render/: mod.rs  pipeline.rs  render_loop.rs  text.rs  window.rs
src/render/assets/: commit_mono_mtsdf_64.json
src/render/shaders/: connection.wgsl  input.wgsl  msdf_text.wgsl  neuron.wgsl  triangle.wgsl
