[package]
name = "toy-RNN"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.10.1"
bytemuck = { version = "1.12", features = ["derive"] }
pollster = "0.3"
wgpu = "25.0.0"
winit = "0.30.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25.8", default-features = false, features = ["png"] }
